@@ -1,11 +1,10 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2003-05-14 23:27:53 achu Exp $
+## $Id: Makefile.am,v 1.2 2004-05-19 22:15:28 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
 bin_PROGRAMS = inst
-
 inst_SOURCES = inst.c
-
 bin_SCRIPTS = dist2 dist_all dist_bootstrap dist_cmp dist_local 
+EXTRA_DIST = dist2 dist_all dist_bootstrap dist_cmp dist_local
