@@ -1,7 +1,8 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2003-05-15 00:35:17 achu Exp $
+## $Id: Makefile.am,v 1.2 2004-05-19 22:15:28 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
 man1_MANS = dist2.1 dist_all.1 dist_cmp.1 dist_local.1 inst.1
+EXTRA_DIST = dist2.1 dist_all.1 dist_cmp.1 dist_local.1 inst.1
